--- a/options.html
+++ b/options.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Global Context Search</title>
     <style>
-      button {
-        height: 30px;
-        width: 30px;
-        outline: none;
-        margin: 10px;
-      }
+    body {
+      min-width: 300px;
+      font-size: 15px;
+    }
+    input {
+      margin: 5px;
+      outline: none;
+    }
     </style>
   </head>
+
   <body>
-    <div id="buttonDiv">
-    </div>
-    <div>
-      <p>Choose a different background color!</p>
-    </div>
+    <h2>Global Google Search</h2>
+    <h3>Country Options</h3>
+    <form id="form">
+    </form>
+    <button type='submit' value='Submit' id='optionsSubmit'>Submit</button>
   </body>
+  <script src="locales.js"></script>
   <script src="options.js"></script>
 </html>
